src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@llvm21_tket.result.result_f64.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [8 x i8] c"foo_f64\00", align 1

define void @_hl.main.1(double %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__rt__double_record_output(double %0, ptr @0)
  ret void
}

declare void @__quantum__rt__double_record_output(double, ptr)
